fix horizontal scroll

--- a/css/board.css
+++ b/css/board.css
@@ -74,7 +74,7 @@ body {
   transition: var(--transition);
 }
 
-.director-img-wrapper::before {
+/* .director-img-wrapper::before {
   content: "";
   position: absolute;
   top: 20px;
@@ -87,15 +87,30 @@ body {
   transition: var(--transition);
   left: 0; 
   overflow: hidden;
+} */
+.director-img-wrapper::before {
+  content: "";
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 2px solid var(--primary);
+  border-radius: 24px;
+  z-index: -1;
+  transition: var(--transition);
 }
 
+.director:hover .director-img-wrapper::before {
+  transform: none;
+}
 .director:hover .director-img {
   transform: scale(1.02);
 }
 
-.director:hover .director-img-wrapper::before {
+/* .director:hover .director-img-wrapper::before {
   transform: translate(10px, -10px);
-}
+} */
 
 .director-name {
   font-size: 2.8rem;
